coding with bootstrap

--- a/services.html
+++ b/services.html
@@ -4,9 +4,91 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0-beta1/css/bootstrap.min.css">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+
+  <link rel="stylesheet" href="./css/services.css">
+
+  <title>Services</title>
 </head>
 <body>
-  <h1>Services page</h1>
+  <section class="services section-bg" id="services">
+    <div class="container">
+      <header class="section-header">
+        <h3>Services</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus error laborum illum provident, at assumenda ab deleniti cupiditate nisi? Ipsum maiores, sapiente officiis explicabo accusamus libero velit itaque ullam impedit?
+        </p>
+      </header>
+
+      <div class="row">
+        <div class="col-md-6 col-lg-4">
+            <div class="box">
+              <div class="icon">
+                <i class="fa fa-briefcase service-icon"></i>
+              </div>
+              <h4 class="title"><a href="#">Service 1</a></h4>
+              <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, enim suscipit. Aut eum quae odio repellendus, autem reprehenderit nobis quo neque eveniet, cum eaque, animi sapiente quibusdam aliquam odit repudiandae!</p>
+            </div>
+        </div>
+
+        <!--service 2  -->
+        <div class="col-md-6 col-lg-4">
+          <div class="box">
+            <div class="icon">
+              <i class="fa fa-clipboard service-icon"></i>
+            </div>
+            <h4 class="title"><a href="#">Service 2</a></h4>
+            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, enim suscipit. Aut eum quae odio repellendus, autem reprehenderit nobis quo neque eveniet, cum eaque, animi sapiente quibusdam aliquam odit repudiandae!</p>
+          </div>
+      </div>
+
+      <!-- service 3 -->
+      <div class="col-md-6 col-lg-4">
+        <div class="box">
+          <div class="icon">
+            <i class="fa fa-chart-bar service-icon"></i>
+          </div>
+          <h4 class="title"><a href="#">Service 3</a></h4>
+          <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, enim suscipit. Aut eum quae odio repellendus, autem reprehenderit nobis quo neque eveniet, cum eaque, animi sapiente quibusdam aliquam odit repudiandae!</p>
+        </div>
+    </div>
+
+    <!-- service 4 -->
+    <div class="col-md-6 col-lg-4">
+      <div class="box">
+        <div class="icon">
+          <i class="fa fa-binoculars service-icon"></i>
+        </div>
+        <h4 class="title"><a href="#">Service 4</a></h4>
+        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, enim suscipit. Aut eum quae odio repellendus, autem reprehenderit nobis quo neque eveniet, cum eaque, animi sapiente quibusdam aliquam odit repudiandae!</p>
+      </div>
+  </div>
+
+  <!-- service 5 -->
+  <div class="col-md-6 col-lg-4">
+    <div class="box">
+      <div class="icon">
+        <i class="fa fa-cog service-icon"></i>
+      </div>
+      <h4 class="title"><a href="#">Service 5</a></h4>
+      <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, enim suscipit. Aut eum quae odio repellendus, autem reprehenderit nobis quo neque eveniet, cum eaque, animi sapiente quibusdam aliquam odit repudiandae!</p>
+    </div>
+</div>
+
+<!-- service 6 -->
+<div class="col-md-6 col-lg-4">
+  <div class="box">
+    <div class="icon">
+      <i class="fa fa-calendar service-icon"></i>
+    </div>
+    <h4 class="title"><a href="#">Service 6</a></h4>
+    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, enim suscipit. Aut eum quae odio repellendus, autem reprehenderit nobis quo neque eveniet, cum eaque, animi sapiente quibusdam aliquam odit repudiandae!</p>
+  </div>
+</div>
+  
+      </div>
+    </div>
+  </section>
 </body>
 </html>
